@@ -1,0 +1,4 @@
+
+
+InformixExceptionFormatter.notAvailableMsg=Not Available
+InformixExceptionFormatter.positionLabel=Position: 
